style(): add styles, variables and mixins

--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -45,3 +45,13 @@
   font-size: 15px;
   line-height: 20px;
 }
+
+@mixin fontChart {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  color: #92857a;
+}
