--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -10,8 +10,9 @@ $white: #ffffff;
 
 $dark-brown: hsl(25, 47%, 15%);
 $medium-brown: hsl(28, 10%, 53%);
-$cream: hsl(27, 66%, 92%);
-$very-pale-orange: hsl(33, 100%, 98%);
+$cream: #f8e9dd;
+$very-pale-orange: #fffaf5;
+$card-white: #fffbf6;
 
 //Breakpoints
 $mobile: 375px;
