--- a/components/chart/chart.scss
+++ b/components/chart/chart.scss
@@ -1,4 +1,4 @@
-.chart {
+.resume {
   min-width: 343px;
   max-width: 540px;
   height: 421px;
@@ -17,6 +17,49 @@
   hr {
     margin-block-start: 24px;
     margin-block-end: 24px;
+  }
+
+  &__chart {
+    height: 177px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    li {
+      height: 177px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+    }
+
+    .column {
+      width: 33px;
+      background: $soft-red;
+      border-radius: 5px;
+      margin-bottom: 11px;
+
+      &:hover {
+        background: #ff9b86;
+      }
+
+      &--major {
+        background: $cyan;
+        &:hover {
+          background: #b4e0e5;
+        }
+      }
+    }
+
+    p {
+      font-family: "DM Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 16px;
+      color: $medium-brown;
+    }
   }
 
   &__total-month {
@@ -70,6 +113,23 @@
     hr {
       margin-block-start: 32px;
       margin-block-end: 32px;
+    }
+
+    &__chart {
+      height: 178px;
+
+      li {
+        height: 178px;
+      }
+
+      .column {
+        width: 50.36px;
+        margin-bottom: 8px;
+      }
+
+      p {
+        @include fontMiniCaption;
+      }
     }
 
     &__total-month {
