--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -12,7 +12,7 @@ body {
   background: $cream;
 }
 
-#__next{
+#__next {
   height: 100%;
 }
 
@@ -22,5 +22,34 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 16px
+  padding: 16px;
+}
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 75px;
+  height: 40px;
+  background-color: $dark-brown;
+  color: #fff;
+  text-align: center;
+  padding: 8px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  margin-bottom: 8px;
+  left: 90%;
+  margin-left: -60px;
+  
+  @include fontBodyBold;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
